[workspace]
members = [
    ".",
    "fuzz",
]

[package]
name = "ekv"
version = "0.1.0"
edition = "2021"

[features]
std = []
log = ["dep:log", "std"]
defmt = ["dep:defmt"]

### FEATURES FOR TESTING ONLY. NOT COVERED BY SEMVER.

# Panic on corrupted, instead of returning Error::Corrupted.
# Useful for seeing the stack trace of the corruption check that tripped.
_panic-on-corrupted = []

# Erase pages immediately when freeing them.
# Helps catch use-after-frees.
_erase-on-free = []

# Expose inner guts.
_test = []

[dependencies]
defmt = { version = "0.3.2", optional = true }
log = { version = "0.4.17", optional = true }
heapless = "0.7.16"
embassy-sync = "0.1.0"

[dev-dependencies]
ekv = { path = ".", features = ["std", "log"]}
env_logger = "0.10.0"
plotters = "0.3.4"
test-log = "0.2.11"
rand = "0.8.5"
tokio = { version = "1.24.2", default-features = false, features = ["macros", "rt"] }
critical-section = { version = "1", features = ["std"] }

# Do asserts and overflow checks when doing `cargo test --release`
# Release makes smoke tests faster, but we still want the full checking.
[profile.release]
debug-assertions = true
overflow-checks = true
