[package]
name = "ekv-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.2.2", features = ["derive"] }
libfuzzer-sys = "0.4"
env_logger = "0.10"
ekv = { path = ".." }


[[bin]]
name = "read"
path = "fuzz_targets/read.rs"
test = false
doc = false

[[bin]]
name = "ops"
path = "fuzz_targets/ops.rs"
test = false
doc = false
