[package]
name = "ekv-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.2.2", features = ["derive"] }
libfuzzer-sys = "0.4"
env_logger = "0.10"
ekv = { path = "..", features= ["std", "log", "_test"]}
log = { version = "0.4.17" }
tokio = { version = "1.24.2", default-features = false, features = ["rt"] }
critical-section = { version = "1", features = ["std"] }

[[bin]]
name = "read"
path = "fuzz_targets/read.rs"
test = false
doc = false

[[bin]]
name = "ops"
path = "fuzz_targets/ops.rs"
test = false
doc = false

[[bin]]
name = "file"
path = "fuzz_targets/file.rs"
test = false
doc = false
