[workspace]
members = ["."]

[package]
edition = "2021"
name = "ekv-nrf-example"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "ekv/defmt",
    "embassy-sync/defmt",
    "embassy-executor/defmt",
    "embassy-time/defmt",
    "embassy-time/defmt-timestamp-uptime",
    "embassy-nrf/defmt",
    "panic-probe/print-defmt",
]

[dependencies]
ekv = { path = "../../", features = [
    "page-size-4096",
    "align-4",
    "max-page-count-2048",
]}
embassy-futures = { version = "0.1.0" }
embassy-sync = { version = "0.1.0" }
embassy-executor = { version = "0.1.0", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.1.0" }
embassy-nrf = { version = "0.1.0", features = ["nightly", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac"] }

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

static_cell = "1.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3" }
heapless = "0.7.16"
rand_core = { version = "0.6.4", default-features = false }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "41a563aae3e474955892b27487e185f5f486f525" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "41a563aae3e474955892b27487e185f5f486f525" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "41a563aae3e474955892b27487e185f5f486f525" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "41a563aae3e474955892b27487e185f5f486f525" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", rev = "41a563aae3e474955892b27487e185f5f486f525" }
