[workspace]
members = ["."]

[package]
edition = "2021"
name = "ekv-examples-rp2040"
version = "0.1.0"

[dependencies]
embassy-executor = { version = "0.7.0",  features = ["defmt", "executor-thread", "arch-cortex-m"] }
embassy-time = { version = "0.4.0",  features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.4.0",  features = ["rp2040", "defmt", "unstable-pac", "time-driver"] }
embassy-sync = { version = "0.7.0" }
embassy-futures = { version = "0.1.1" }

defmt = "1"
defmt-rtt = "1"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

ekv = { path = "../../", features = ["crc", "align-4", "page-size-4096", "max-page-count-32"] }
embedded-storage = { version = "0.3" }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "b5ab3276dce7322e33946e974770fa91b98124a4" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "b5ab3276dce7322e33946e974770fa91b98124a4" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "b5ab3276dce7322e33946e974770fa91b98124a4" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "b5ab3276dce7322e33946e974770fa91b98124a4" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "b5ab3276dce7322e33946e974770fa91b98124a4" }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false
